experiments/multi-root-grammar/variant/test/corpus/errors/e331.txt
================================================================================
E331 - E331: UnexpectedNodeInContext
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	MAR Target_Child
@ID:	eng|corpus|MAR|||||Target_Child|||
*MAR:	don't give me a YM . 1520652_1522904
%mor:	aux|do-Fin-Imp-S~part|not verb|give-Fin-Imp-S pron|I-Prs-Acc-S1 det|a-Ind-Art noun|-Acc .
%gra:	1|3|AUX 2|3|ADVMOD 3|6|ROOT 4|3|IOBJ 5|6|DET 6|3|OBJ 7|3|PUNCT
@End

--------------------------------------------------------------------------------

(document (utf8_header (newline)) (begin_header (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (id_header (id_prefix) (header_sep (colon) (tab)) (id_contents (id_languages (languages_contents (language_code))) (pipe) (id_corpus) (pipe) (id_speaker) (pipe) (pipe) (pipe) (pipe) (pipe) (id_role) (pipe) (pipe) (pipe)) (newline))) (line (utterance (main_tier (star) speaker: (speaker) (colon) (tab) (tier_body content: (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces)) ending: (utterance_end (period) (whitespaces) (ERROR (standalone_word)) (newline)))) (mor_dependent_tier (mor_tier_prefix) (tier_sep (colon) (tab)) (mor_contents (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value))) post_clitics: (mor_post_clitic (tilde) (mor_word (mor_pos) (pipe) (mor_lemma)))) (whitespaces) (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value)))) (whitespaces) (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value)))) (whitespaces) (mor_content main: (mor_word (mor_pos) (pipe) (mor_lemma) (mor_feature (hyphen) (mor_feature_value)) (mor_feature (hyphen) (mor_feature_value)))) (whitespaces) (ERROR (mor_pos) (pipe) (hyphen) (space)) (period)) (newline)) (gra_dependent_tier (gra_tier_prefix) (tier_sep (colon) (tab)) (gra_contents (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name)) (whitespaces) (gra_relation index: (gra_index) (pipe) head: (gra_head) (pipe) relation: (gra_relation_name))) (newline)))) (end_header (newline)))
