experiments/multi-root-grammar/variant/test/corpus/errors/e344.txt
================================================================================
E344 - E344: Invalid scoped annotation nesting
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
*CHI:	hello <world <foo> bar> .
@End

--------------------------------------------------------------------------------

(document (utf8_header (newline)) (begin_header (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (id_header (id_prefix) (header_sep (colon) (tab)) (id_contents (id_languages (languages_contents (language_code))) (pipe) (id_corpus) (pipe) (id_speaker) (pipe) (pipe) (pipe) (pipe) (pipe) (id_role) (pipe) (pipe) (pipe)) (newline))) (line (utterance (main_tier (star) speaker: (speaker) (colon) (tab) (tier_body content: (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces)) (ERROR (less_than) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (less_than) (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word))))) (greater_than) (whitespaces) (greater_than) (space)) ending: (utterance_end (period) (newline)))))) (end_header (newline)))
