experiments/multi-root-grammar/variant/test/corpus/errors/e382_1.txt
================================================================================
E382_1 - generated from corpus
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
*CHI:	hello world .
%mor:	|hello n|world .
@End

--------------------------------------------------------------------------------
